# rss_reader_interface_test

./: manage.py  pyproject.toml  readme.md
rss_reader_interface/: apps.py  controller.py  forms.py  models.py  urls.py  views.py
rss_reader_interface/templates/rss_reader_interface/: index.html  item.html
rss_reader_interface_test/: asgi.py  settings.py  urls.py  wsgi.py
