[tool.poetry]
name = "rss-reader-interface-test"
version = "0.1.0"
description = ""
authors = ["dodiko1d <kirill.anufrienko@gmail.com>"]
readme = "README.md"
packages = [{include = "rss_reader_interface_test"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
requests = "^2.28.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"
python-dateutil = "^2.8.2"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

